# rust-sdl2-emscripten

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js  tempo.config.ts
.cargo/: config.toml
.github/workflows/: build.yaml  checks.yaml  deploy.yaml  linux.yaml  wasm.yaml  windows.yaml
assets/: index.html  styles.scss
scripts/: build-wasm.sh  build-wasm.ts  build.sh  serve-wasm.sh
src/: emscripten.rs  main.rs  store.rs
workflows/: deploy.yaml
