[package]
name = "spiritus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colors-transform = "0.2.11"
lazy_static = "1.4.0"
rand = "0.8.5"
sdl2 = { version = "0.35", features = ["image", "ttf", "mixer", "gfx"] }
spin_sleep = "1.1.1"
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_debug"]}
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

[target.'cfg(target_os = "windows")'.dependencies]
atty = "0.2"
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[target.'cfg(target_os = "emscripten")'.dependencies]
libc = "0.2.16"