[package]
name = "spiritus"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.38", features = ["image", "ttf", "mixer", "gfx"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[target.'cfg(target_os = "emscripten")'.dependencies]
libc = "0.2.16"
