[package]
name = "spiritus"
version = "0.2.0"
edition = "2021"

[lints.clippy]
all = { level = "deny" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[dependencies]
sdl2 = { version = "0.38", features = ["image", "ttf", "mixer", "gfx"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}

[target.'cfg(target_os = "emscripten")'.dependencies]
libc = "0.2.16"
